--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ packages        = [
 ]
 
 [tool.poetry.dependencies]
-python                   = ">=3.7,<3.9"
+python                   = ">=3.7,<=3.9"
 aiofiles                 = "~0.4"
 aiohttp                  = "~3.6"
 
