Added workaround for https://github.com/html5lib/html5lib-python/issues/419 and https://github.com/python-poetry/poetry/issues/1733 on Python3.9

--- a/tasks/jobs/pages.yml
+++ b/tasks/jobs/pages.yml
@@ -29,7 +29,9 @@
     - python -m venv .venv
     - source .venv/bin/activate
     - bash tasks/retry-aborts.sh pip install -U pip
-    - bash tasks/retry-aborts.sh pip install poetry
+    # Install html5lib explicitly from GitHub until https://github.com/python-poetry/poetry/issues/1733
+    # and/or https://github.com/html5lib/html5lib-python/issues/419 is resolved
+    - bash tasks/retry-aborts.sh pip install poetry https://github.com/html5lib/html5lib-python/zipball/af19281fa28788830684b4c8fc6d0c588b092616
     - bash tasks/retry-aborts.sh poetry update
     - source tasks/config.sh
     - git fetch --all --prune --depth=1
