Updated pipelines to not run black, bandit, nor safety, multiple times

--- a/tasks/jobs/deploy.yml
+++ b/tasks/jobs/deploy.yml
@@ -18,7 +18,7 @@
 .deploy:
   allow_failure: false
   stage: deploy
-  image: python:3-stretch
+  image: python:3.8.0
   before_script:
     - source tasks/config.sh
     - "[[ \"$CI_PROJECT_URL\" = \"$ORIGINAL_REPO_URL\" ]] || (echo 'You are running off of a fork, so deployment is skipped.' && exit 0)"
@@ -30,7 +30,7 @@
     - bash tasks/retry-aborts.sh poetry install -v
     - poetry show -v
 
-"Deploy a new dev prerelease":
+"Make prerelease":
   extends: .deploy
   only:
     - staging
@@ -50,7 +50,7 @@
     name:
       staging
 
-"Deploy a new release":
+"Make release":
   extends: .deploy
   only:
     - master
