--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,5 +77,9 @@ nox                      = "*"
 
 [tool.black]
 line-length     = 120
-target-version  = ["py37", "py38", "py39"]
+target-version  = [
+    "py37", 
+    "py38", 
+    # "py39"
+]
 include         = ".*py$"
