Reimplemented parts of the state registry to allow serving of a new UnknownObject type which consumes a coroutine function resolution provider to laziliy invoke if the object is awaited later, as well as a self-healing callback that can optionally be provided to amend the dependent object states. This allows a mechanism for non-websocketed applications to still interact with the HTTP API using the state registry condiut I have developed without fundementally breaking in random places because no cache was made before the call.

--- a/.coveragerc
+++ b/.coveragerc
@@ -16,6 +16,7 @@ exclude_lines =
     ^\s*raise$
     ^\s*pass$
     ^if __name__ == ['"]__main__['"]:$
+    ^if sys.version_info.*:$
     ^\s*...$
     ^\s*@abc.abstractmethod$
 sort = Cover
