--- a/pytest.ini
+++ b/pytest.ini
@@ -16,3 +16,5 @@ markers =
     integration: Mark this test as an integration test.
 
 xfail_strict = true
+norecursedirs = docs *.egg-info .git tasks .nox .pytest_cache .venv venv public
+
