Fixes #123, disables annoying asyncio deprecation warnings made from asynctest once and for all.

--- a/pytest.ini
+++ b/pytest.ini
@@ -18,3 +18,5 @@ markers =
 xfail_strict = true
 norecursedirs = docs *.egg-info .git tasks .nox .pytest_cache .venv venv public
 
+filterwarnings =
+    ignore:.*"@coroutine" decorator is deprecated.*:DeprecationWarning
