Fixed pages job.

--- a/gitlab/pages.yml
+++ b/gitlab/pages.yml
@@ -55,7 +55,7 @@ pages:
   stage: pages
   image: busybox:1.31.1-musl
   before_script:
-    - mkdir public
+    - 'mkdir public || true'
     - pip install poetry
   dependencies:
     - staging-pages
